# Asistant-

./: .gitignore  Cargo.toml  tts_server.py
src/: main.rs  tts_server.py
src/audio/: capture.rs  mod.rs  stt.rs  tts.rs
src/brain/: cloud.rs  context.rs  mod.rs
src/commands/: mod.rs  router.rs
src/system/: kde.rs  mod.rs
src/tts/: piper.rs
src/ui/: app.rs  mod.rs  sprites.rs  tray.rs
