[package]
name = "kuro-assistant"
version = "0.1.0"
edition = "2021"
authors = ["Kuro Team"]
description = "Voice assistant for Arch + KDE"

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
panic = "abort"
strip = true


[dependencies]
tokio = { version = "1.37", features = ["full"] }
tokio-util = "0.7"
cpal = "0.15"
ringbuf = "0.4"
zbus = "4.2"
zvariant = "4.1"
reqwest = { version = "0.12", features = ["json", "multipart"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rusqlite = { version = "0.31", features = ["bundled"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
toml = "0.8"
dirs = "5.0"
anyhow = "1.0"
thiserror = "1.0"
once_cell = "1.19"
regex = "1.10"
chrono = "0.4"
tempfile = "3.10"
hound = "3.5"


[features]
default = []
ui = []

[[bin]]
name = "kuro-daemon"
path = "src/main.rs"
